FEATURE: Core | Numbers now localized to selected language [TuxPaper]
FEATURE: Dev  | More features for torrent creation [Parg]
FEATURE: Plug | Experimental data upload facility for tracker web pages [Parg]
FEATURE: Plug | WebUI support for "host" operation [Parg]
FEATURE: UI   | New peer columns to help track leechers [TuxPaper]

CHANGE: Core | More sensible merging of plugin.properties on plugin update [Parg]
CHANGE: Core | More "polite" hash checking...doesn't stress the cpu/system as much [Nolar]

BUGFIX: Core | 99.X% / continuous hash fails fix [Parg]
BUGFIX: UI   | Fix bug where failed-hashcheck pieces never reappeared in Pieces view [Nolar]



2004.06.21 | Azureus 2.1.0.2

FEATURE: Core | Health items now show if a torrent is being shared/published [Parg]
FEATURE: Core | Creation of self-signed certificates for SSL (etc) via UI [Parg]
FEATURE: Core | Set download speed per torrent [Parg]
FEAUTRE: Core | Universal Plugin and Play (UPnP) support [Parg]
FEATURE: Dev  | ToolTip access functions for table cells [TuxPaper]
FEATURE: Plug | Tracker plugin supports simple category view [Parg]
FEATURE: Plug | Webui support for password protected trackers [Parg]
FEATURE: Plug | Webui attempts to get access to system clipboard to fix copy/paste issues [Parg]
FEATURE: Plug | Plugin interface extensions for basic plugin config [Parg]
FEATURE: Plug | External authorisation framework [Parg]
FEATURE: Plug | WebUI + XML/HTTP i/f now have separately configurable username/password via Plugin config (*not* plugin.properties) [Parg]
FEATURE: Plug | WebUI can now use signed jars, if configured, so that clipboard access doesn't require local config [Parg]
FEATURE: UI   | Better scrape result reporting, including new "Next Tracker Access" column [TuxPaper]
FEATURE: UI   | Tooltip for Health Icon [TuxPaper]
FEATURE: UI   | New language: Japanese [Gouss]

CHANGE: Core | Core update checker now uses aelitis.com server to grab latest version instead of SF's one [Gudy]